--- a/WebApplicationMvc/Views/Produtos/Index.cshtml
+++ b/WebApplicationMvc/Views/Produtos/Index.cshtml
@@ -3,13 +3,10 @@
 @{
     ViewData["Title"] = "Index";
 }
-
-<h1>Index</h1>
-
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Cadastra Produto</a>
 </p>
-<table class="table">
+<table class="table" id="table-produtos">
     <thead>
         <tr>
             <th>
@@ -43,8 +40,8 @@
                 @Html.DisplayFor(modelItem => item.QuantidadeEmEstoque)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
