--- a/WebApplicationMvc/Views/Login/Login.cshtml
+++ b/WebApplicationMvc/Views/Login/Login.cshtml
@@ -5,10 +5,10 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Login">
-            <div class="form-group">
+           @*  <div class="form-group">
                 <label for="Email">Email</label>
                 <input type="email" class="form-control" asp-for="Email"/>
-            </div>
+            </div> *@
             <div class="form-group">
                 <label for="Senha">Senha</label>
                 <input type="password" class="form-control" asp-for="Senha" required />
